<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TemperatureInfo"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/capacity"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="25dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="25dp"
            android:background="@drawable/top_bottom_borders">

            <TextView
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/limit"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:paddingTop="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:text="@string/full"
                android:background="@color/darkGreen"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fullCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8.5"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:paddingBottom="10dp"
                android:text="@string/capacityFull"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:text="@string/ok"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@color/green"/>

            <TextView
                android:id="@+id/okCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:paddingBottom="10dp"
                android:text="@string/capacityOk"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:text="@string/low"
                android:background="@color/yellow"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lowCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:paddingBottom="10dp"
                android:text="@string/capacityLow"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:text="@string/empty"
                android:background="@color/red"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/EmptyCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:paddingBottom="10dp"
                android:text="@string/capacityEmpty"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>