<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:background="@color/white">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorOnSecondary"
        android:elevation="4dp">

        <TextView
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </android.widget.Toolbar>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/overview"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="25dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="25dp"
        android:background="@drawable/top_bottom_borders">

        <TextView
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/temperature"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/temperatureButton"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="225dp"
            android:layout_marginTop="-3dp"
            android:background="@drawable/border"
            android:text="@string/info"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/inside"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/insideTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:text="15.5° Celsius"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/insideTempIndicator"
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:background="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/outside"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/outsideTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:text="5.5° Celsius"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/outsideTempIndicator"
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/low"
            android:textColor="@color/black"
            android:background="@color/blue"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@drawable/top_bottom_borders">

        <TextView
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/humidity"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/humidityButton"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="-3dp"
            android:background="@drawable/border"
            android:text="@string/info"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/inside"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/insideHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:text="30%"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/insideHumidityIndicator"
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:background="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/outside"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/outsideHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:text="50%"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/outsideHumidityIndicator"
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:background="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@drawable/top_bottom_borders">

        <TextView
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/capacity"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/waterButton"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="193dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="-3dp"
            android:background="@drawable/border"
            android:text="@string/info"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/watertank"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:text="50% - 100%"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/capacityIndicator"
            android:layout_width="33dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:background="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>

</ScrollView>